# fd3GUI

./: README.md  pyproject.toml
execfd3/: fd3_Linux
fd3_gui/: fd3bin_gui.py
tests/V453_Cyg/: V453_Cyg.mod  V453_Cyg.obs  V453_Cyg.res  V453_Cyg.rvs  fd3  input.in  jackknife.out  jackknife_swap.out  jackknife_swap.out copy  output.l
tests/hd_135437_1/: 01034183_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01034183_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01034290_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01034290_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01035063_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01035063_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01035162_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01035162_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01037920_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01037920_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01038957_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01038957_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01039487_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01039487_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01041616_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01041616_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  01041715_HRF_OBJ_ext_CosmicsRemoved_log_merged_c.fits  01041715_HRF_OBJ_ext_CosmicsRemoved_log_merged_cf.fits  BJD_values.csv  hd_135437.list  hd_135437.phase  input.in  input_20230612_1610.in  jackknife.out  output.l  temp.obs.comp1  temp.obs.comp2  temp.obs.formatted  temp.obs.mod  temp.obs.obs  temp.obs.res  temp.obs.rvs
